intial login and sign up page created. Show and display element functions still need work on, and need to add password protected page

--- a/healthProject/src/user_homepage.html
+++ b/healthProject/src/user_homepage.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>DoseAlert
+	<title>Returning User
   </title>
   </head>
   <body>
-    <div id="main-target"></div>
+    <div id="user-homepage.html"></div>
   </body>
 </html>
