--- a/healthProject/src/index.html
+++ b/healthProject/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="	background-image: linear-gradient(rgb(226, 173, 238), rgb(190, 243, 255));">
+<html>
   <head>
 	<title>DoseAlert
   </title>
